terminando el slider y continuando con el proyecto

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "react": "^18.2.0",
+    "react-animated-css": "^1.2.1",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3"
